@@ -60,11 +60,13 @@ argument_list|,
 literal|"al"
 argument_list|)
 decl_stmt|;
-name|assertTrue
+name|assertEquals
 argument_list|(
 name|d
-operator|==
+argument_list|,
 literal|1.0f
+argument_list|,
+literal|0.001
 argument_list|)
 expr_stmt|;
 name|d
@@ -78,15 +80,13 @@ argument_list|,
 literal|"marhta"
 argument_list|)
 expr_stmt|;
-name|assertTrue
+name|assertEquals
 argument_list|(
 name|d
-operator|>
-literal|0.66
-operator|&&
-name|d
-operator|<
-literal|0.67
+argument_list|,
+literal|0.6666
+argument_list|,
+literal|0.001
 argument_list|)
 expr_stmt|;
 name|d
@@ -100,15 +100,13 @@ argument_list|,
 literal|"johnson"
 argument_list|)
 expr_stmt|;
-name|assertTrue
+name|assertEquals
 argument_list|(
 name|d
-operator|>
-literal|0.199
-operator|&&
-name|d
-operator|<
-literal|0.201
+argument_list|,
+literal|0.4285
+argument_list|,
+literal|0.001
 argument_list|)
 expr_stmt|;
 name|d
@@ -122,15 +120,13 @@ argument_list|,
 literal|"cabvwxyz"
 argument_list|)
 expr_stmt|;
-name|assertTrue
+name|assertEquals
 argument_list|(
 name|d
-operator|>
-literal|0.749
-operator|&&
-name|d
-operator|<
-literal|0.751
+argument_list|,
+literal|0.75
+argument_list|,
+literal|0.001
 argument_list|)
 expr_stmt|;
 name|d
@@ -144,15 +140,13 @@ argument_list|,
 literal|"duane"
 argument_list|)
 expr_stmt|;
-name|assertTrue
+name|assertEquals
 argument_list|(
 name|d
-operator|>
-literal|0.599
-operator|&&
-name|d
-operator|<
-literal|0.601
+argument_list|,
+literal|0.666
+argument_list|,
+literal|0.001
 argument_list|)
 expr_stmt|;
 name|d
@@ -166,15 +160,13 @@ argument_list|,
 literal|"dicksonx"
 argument_list|)
 expr_stmt|;
-name|assertTrue
+name|assertEquals
 argument_list|(
 name|d
-operator|>
-literal|0.199
-operator|&&
-name|d
-operator|<
-literal|0.201
+argument_list|,
+literal|0.5
+argument_list|,
+literal|0.001
 argument_list|)
 expr_stmt|;
 name|d
@@ -188,11 +180,13 @@ argument_list|,
 literal|"ten"
 argument_list|)
 expr_stmt|;
-name|assertTrue
+name|assertEquals
 argument_list|(
 name|d
-operator|==
-literal|0f
+argument_list|,
+literal|0
+argument_list|,
+literal|0.001
 argument_list|)
 expr_stmt|;
 name|float
@@ -219,11 +213,13 @@ argument_list|,
 literal|"kai ephron"
 argument_list|)
 decl_stmt|;
-name|assertTrue
+name|assertEquals
 argument_list|(
 name|d1
-operator|<
+argument_list|,
 name|d2
+argument_list|,
+literal|0.001
 argument_list|)
 expr_stmt|;
 name|d1
