@@ -765,7 +765,7 @@ argument_list|)
 expr_stmt|;
 name|assertEquals
 argument_list|(
-literal|1
+literal|2
 argument_list|,
 name|similar
 operator|.
@@ -780,6 +780,16 @@ literal|0
 index|]
 argument_list|,
 literal|"five"
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|similar
+index|[
+literal|1
+index|]
+argument_list|,
+literal|"nine"
 argument_list|)
 expr_stmt|;
 name|similar
@@ -825,7 +835,7 @@ argument_list|)
 expr_stmt|;
 name|assertEquals
 argument_list|(
-literal|1
+literal|2
 argument_list|,
 name|similar
 operator|.
@@ -842,6 +852,16 @@ argument_list|,
 literal|"five"
 argument_list|)
 expr_stmt|;
+name|assertEquals
+argument_list|(
+name|similar
+index|[
+literal|1
+index|]
+argument_list|,
+literal|"nine"
+argument_list|)
+expr_stmt|;
 name|similar
 operator|=
 name|spellChecker
@@ -855,11 +875,21 @@ argument_list|)
 expr_stmt|;
 name|assertEquals
 argument_list|(
-literal|0
+literal|1
 argument_list|,
 name|similar
 operator|.
 name|length
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|similar
+index|[
+literal|0
+index|]
+argument_list|,
+literal|"five"
 argument_list|)
 expr_stmt|;
 comment|// test restraint to a field
@@ -930,7 +960,7 @@ argument_list|)
 expr_stmt|;
 name|assertEquals
 argument_list|(
-literal|1
+literal|2
 argument_list|,
 name|similar
 operator|.
@@ -945,6 +975,16 @@ literal|0
 index|]
 argument_list|,
 literal|"ninety"
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|similar
+index|[
+literal|1
+index|]
+argument_list|,
+literal|"one"
 argument_list|)
 expr_stmt|;
 try|try
