@@ -25,6 +25,9 @@ Bug fixes
  4. LUCENE-1514: ShingleMatrixFilter#next(Token) easily throws a StackOverflowException
     due to recursive invocation. (Karl Wettin)
 
+ 5. LUCENE-1548: Fix distance normalization in LevenshteinDistance to
+    not produce negative distances (Thomas Morton via Mike McCandless)
+
 New features
 
  1. LUCENE-1470: Added TrieRangeQuery, a much faster implementation of
